Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <body>
 
-            <CENTER><HEADER><b>ONG AYUDA A UN PELUDO</b></HEADER></CENTER>
+            <h1></h1><CENTER><b>ONG AYUDA A UN PELUDO</b></CENTER></h1>
              
             <p>Somos una ONG que se esfuerza para ayudar a nuestros <i>amigos peludos</i>.</p>
            
