--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                  <li>Cher Ami: Vocera y relacionadora pública</li>
              </UL>
              
+             <center>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem quam explicabo, sit commodi modi provident quos? Quibusdam autem laudantium, veniam a nulla iste fugit officia, asperiores, facere vel aliquam.</center>
 
 
 
