--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                 <h2 style="text-align: center;" >Integrantes</h2>
 
 
-             <UL style="margin-left: 600px;">
-                 <li>Susana Gallardo: Especialista en gatoterapia</li>
-                 <li>Juan Pablo Vera: Coordinador de colas y patas</li>
-                 <li>Cher Ami: Vocera y relacionadora pública</li>
+             <UL style="display:flex; justify-content: center;">
+                 <div>
+                    <li>Susana Gallardo: Especialista en gatoterapia</li>
+                    <li>Juan Pablo Vera: Coordinador de colas y patas</li>
+                    <li>Cher Ami: Vocera y relacionadora pública</li>
+                 </div>
+              
              </UL>
 
             <br>
